--- a/index.html
+++ b/index.html
@@ -11,7 +11,33 @@
 		Celebrating our 75th Year		
 	</header>
 	<main>
+		<h1>This season's guest speakers</h1>
+		<h2>Our Mission</h2>
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
+		<blockquote>Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</blockquote>
 		
+		<h2>Our Ticket Packages</h2>
+		<ul>
+			<li>
+				Season Package: $95
+				Patron Package: $200
+				Single Speaker: $25
+			</li>
+		</ul>
+
+		<h1>This season's guest speakers</h1>
+		<h3>October<br></h3>
+		<h3><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
+		<img src="images/brancaccio75.jpg" alt="David Brancaccio Photo">
+
+		<h3>November <br></h3>
+		<h3><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin Photo">
+
+		<h3>January<br></h3>
+		<h3><a href="speakers/chua.html">Amy Chua</a></h3>
+		<img src="images/chua75.jpg" alt="Amy Chua Photo">
+
 	</main>
 	<footer>
 		(c) 2024, San Joaquin Valley Town Hall, Fresno, CA 93755		
